Fix issues with link being invisible

--- a/src/static/css/_custom.scss
+++ b/src/static/css/_custom.scss
@@ -390,6 +390,10 @@ section#program-list {
                 @extend .mb-4;
                 @extend .pb-3;
 
+                a {
+                    color: $font-color;
+                }
+
                 a:visited {
                     color: #6c5aa8;
                 }
