--- a/src/static/css/_globals.scss
+++ b/src/static/css/_globals.scss
@@ -661,14 +661,13 @@ nav#pagination {
 
             a {
                 @extend .page-link;
+                color: $font-color;
             }
         }
     }
 }
 
 ol.breadcrumb {
-    background-color: $light;
-
     @include media-breakpoint-up(lg) {
         margin-bottom: 3rem;
     }
