--- a/src/static/css/_theme.scss
+++ b/src/static/css/_theme.scss
@@ -47,14 +47,16 @@ $warning: $orange;
 $primary: $contrast-color;
 
 $body-color: $font-color;
-$link-color: $font-color;
+$link-color: $contrast-color;
 $link-hover-color: $contrast-color;
 // $link-hover-decoration: none;
 $component-active-bg: #59bbab;
 
 $navbar-light-color: $font-color;
 $navbar-light-hover-color: $contrast-color;
-$breadcrumb-active-color: $contrast-color;
+
+$breadcrumb-bg: white;
+$breadcrumb-active-color: $font-color;
 
 $font-size-base: 1rem;
 $font-size-lg: $font-size-base * 1.5;
